--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
 </head>
 
 <body>
-<div id="container">
-    <form class="authForm">
-        <input name="email" value="email" />
-        <input name="password" value="password" />
-        <button class="btnAuth" type="button">Create Account</button>
-    </form>
-</div>
-    <!-- Scripts -->
+    <div id="container" ng-app="app" ng-controller="mainController">
+        <form class="authForm">
+            <input name="email" value="email" ng-model="user.email"/>
+            <input name="password" value="password" ng-model="user.password"/>
+            <button class="btnAuth" type="button" ng-click="log()">Create Account</button>
+        </form>
+        <p>{{message}}</p>
+    </div>
+    <!-- jQuery -->
     <script src="script/jQuery-min.js"></script>
-    <!-- Firebase library -->
+    <!-- AngularJS -->
+    <script src="script/angular.min.js"></script>"
+    <!-- Firebase -->
     <script src="script/firebase.js"></script>
-    <script src="script/mithril.min.js"></script>"
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+
     <script src="script/main.js"></script>
 </body>
 
