--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
 </head>
 
 <body>
-    <div id="container" ng-app="app" ng-controller="mainController">
-        <form class="authForm">
-            <input name="email" value="email" ng-model="user.email"/>
-            <input name="password" value="password" ng-model="user.password"/>
-            <button class="btnAuth" type="button" ng-click="log()">Create Account</button>
+    <div id="container" ng-app="app" ng-controller="mainController" ng-cloak>
+        <form class="authForm" ng-show="!isLogged()">
+            <input name="email" value="email" ng-model="user.email" />
+            <input name="password" value="password" type="password" ng-model="user.password" />
+            <button class="btnAuth" type="button" ng-click="login(user)">Login</button>
         </form>
-        <p>{{message}}</p>
+        <a href="#" ng-show="isLogged()" ng-click="logout()">Logout</a>
+        <form class="authForm" ng-show="!isLogged()">
+            <input name="email" value="email" ng-model="newUser.email" />
+            <input name="password" value="password" type="password" ng-model="newUser.password" />
+            <button class="btnAuth" type="button" ng-click="createUser(newUser)">Create Account</button>
+        </form>
+        <!-- Templates are inserted here -->
+        <div ui-view ng-cloak>
+        </div>
     </div>
     <!-- jQuery -->
     <script src="script/jQuery-min.js"></script>
     <!-- AngularJS -->
-    <script src="script/angular.min.js"></script>"
+    <script src="script/angular.min.js"></script>
+    <!-- AngularUI router -->
+    <script src="script/angular-ui-router.min.js"></script>
     <!-- Firebase -->
     <script src="script/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
-
-    <script src="script/main.js"></script>
+    <script src="script/app.js"></script>
 </body>
 
 </html>
